# VideoExcess

./: .gitignore  CMakeLists.txt  README.md  assetsConfig.qrc  mainwindow.h  resources.qrc.txt  settings.cpp  settings.h  settings.ui  videoexcess.xcf
old save becuase i fucked up git/1 fixed/: CMakeLists.txt  settings.cpp  settings.h  videoexcessdark.xcf
old save becuase i fucked up git/made detection for checkbox/: form.h  mainwindow.cpp  mainwindow.ui  settings.cpp  settings.h
src/: filex.cpp  filex.h  filex.ui  form.cpp  form.h  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  player.ui  settings.cpp  settings.h  settings.ui
